--- a/styles.css
+++ b/styles.css
@@ -1,44 +1,54 @@
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #111139;
-  }
-  
-  h1 {
-    text-align: center;
-    padding: 10px 0;
-    background-color: #9ad0eccb;
-    color: #000000;
-    margin: 0;
-  }
-  
-  #map {
-    height: 500px;
-    margin: 20px;
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  .button-container {
-    margin: 20px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-  
-  .button-container button {
-    margin: 5px;
-    padding: 8px 16px;
-    background-color: #4CAF50;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 14px;
-    transition: background-color 0.3s ease;
-  }
-  
-  .button-container button.active {
-    background-color: #1c241c;
-  }
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f5f5f5;
+}
+
+h1 {
+  text-align: center;
+  padding: 10px 0;
+  background-color: #336699;
+  color: #ffffff;
+  margin: 0;
+}
+
+#map {
+  height: calc(100vh - 60px);
+  width: 95%;
+  margin: 20px auto;
+  border: 1px solid #000000;
+  box-shadow: 0 0 30px rgba(5, 5, 5, 5);
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.button-container ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.button-container li {
+  display: inline-block;
+  margin-right: 10px;
+}
+
+.button-container button {
+  padding: 8px 16px;
+  background-color: #339966;
+  color: #ffffff;
+  border: none;
+  border-radius: 70px;
+  cursor: pointer;
+  font-size: 15px;
+  transition: background-color 0.3s ease;
+}
+
+.button-container button.active {
+  background-color: #0c3812;
+}
